# AI-Racer-Hackathon

./: .gitignore  README.md  pyproject.toml  work-to-far.md
configs/: circuit.yaml  gpu.yaml  smoke.yaml
src/ai_racer/: __init__.py  callbacks.py  cli.py  config.py  envs.py  evaluation.py  models.py  plotting.py  recording.py  training.py
tests/: test_config.py  test_envs.py  test_smoke.py
work/: action-memory-evaluation.json
work/action-memory-smoke/session/: config.yaml  curriculum.json
work/action-memory-smoke/session/monitor/: env_0.monitor.csv
work/clearance-smoke/recurrent_circuit_20260615_131031/: config.yaml
work/clearance-smoke/recurrent_circuit_20260615_131031/monitor/: env_0.monitor.csv
work/continuous-smoke/session/: config.yaml  curriculum.json
work/continuous-smoke/session/monitor/: env_0.monitor.csv
work/cuda-smoke/smoke_20260615_121604/: config.yaml
work/hud-smoke/smoke_20260615_114042/: config.yaml
work/priority-smoke/session/: config.yaml
work/ray-smoke/recurrent_circuit_20260615_130740/: config.yaml
work/recurrent-smoke/: evaluation.json
work/recurrent-smoke/recurrent_circuit_20260615_130219/: config.yaml  seeds.json
work/speed-smoke-final/session/: config.yaml
work/speed-smoke/session/: config.yaml  curriculum.json
work/threshold-smoke-final/recurrent_circuit_20260615_133727/: config.yaml
work/threshold-smoke/recurrent_circuit_20260615_133600/: config.yaml
work/tolerance-smoke/smoke_20260615_122428/: config.yaml  seeds.json
work/unlimited-ray-smoke/recurrent_circuit_20260615_132348/: config.yaml
(+27 files in other folders)
