[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-racer"
version = "0.1.0"
description = "Train and evaluate a pixel-based PPO agent in Gymnasium CarRacing-v3."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "gymnasium[box2d]>=1.0,<2",
  "stable-baselines3>=2.4,<3",
  "torch>=2.2",
  "opencv-python>=4.9",
  "PyYAML>=6.0",
  "tensorboard>=2.16",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
ai-racer = "ai_racer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

